    have been validated (avoids 'client read returned EOF' messages
    from server when someone mistypes a command).

    * src/client_proto.h, src/client.c: add connect_state to device query
    output.

    * test/vpcd.c, test/mkconf.pl, etc/vpc.dev: change vpcd plugs from 8 to 16.

    * src/pty.c: fixed _ptym_open to work beyond 176 ptys on Linux (up to 256).

    * test/Makefile: targets for testing 4000 plugs (250 vpcd devices)

    * test/testing.txt: added

2003-11-28 Jim Garlick <garlick@llnl.gov>

    * src/wrappers.c, src/powerman.c, src/device_tcp.c: make Connect()
    non-fatal on ECONNREFUSED.

    * src/powermand.c: make daemonization happen after cli_listen() so
    errors about binding to the powermand port are reported on stderr.

    * src/pty.c: rework error handling.

2003-11-24 Jim Garlick <garlick@llnl.gov>

    * src/parse.y: add ability to put hostlists in 'node' line.
    If hardwired plug names, plug names are assigned in order.
    If not, plug names are set equal to node names.
    This should substantially reduce the size of powerman.conf files on 
    large clusters.

    * test/vpcd.c: add --foreground option for running on a pty.

    * test/TESTRIG: removed

    * test/mkconf.pl: added

2003-10-29 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Added "failed to connect" to query checks.

2003-10-17 Albert Chu <chu11@llnl.gov>
	
    * etc/ipmipower.dev: New File

    * man/powerman.1: 
    Added info about HOST RANGES under tcsh.	
    Fixed typo in powerman examples.

    * Makefile: Install new ipmipower.dev file.	
	
2003-10-16 Jim Garlick <garlick@llnl.gov>

    * src/device_pipe.c: after closing one side of the pty, send a SIGTERM to 
    child processes before attempting to reap them.  This solves a powerman 
    deadlock observed with h8power on ALC.

2003-10-03 Jim Garlick <garlick@llnl.gov>

    * src/hostlist.[ch], src/config.h: updated to latest hostlist package
    from lsd-tools.
