@@ -21,10 +21,16 @@
 
 void dbg_notty(void);
 void dbg_setmask(unsigned long mask);
-void dbg(unsigned long channel, const char *fmt, ...);
+void _dbg(unsigned long channel, const char *fmt, ...);
 char *dbg_fdsetstr(fd_set * set, int n, char *str, int len);
 char *dbg_tvstr(struct timeval *tv, char *str, int len);
 unsigned char *dbg_memstr(unsigned char *mem, int len);
+
+#ifdef NDEBUG
+#define dbg(channel, fmt...)
+#else
+#define dbg(channel, fmt...)    _dbg(channel, fmt)
+#endif
 
 #endif /* DEBUG_H */
 
