@@ -97,9 +97,7 @@ void err_exit(bool errno_valid, const char *fmt, ...)
     va_start(ap, fmt);
     _verr(errno_valid, fmt, ap);
     va_end(ap);
-#ifndef NDEBUG
     dbg(DBG_MEMORY, "err_exit: memory not reclaimed: %d\n", Memory());
-#endif
     exit(1);
 }
 
