@@ -1,18 +1,44 @@
 PowerMan 1.0.19 testing
 
-1. Physical hardware
+1. Powerman test rig
 
-The powerman test rig includes the following test hardware(*):
+The powerman test rig includes single quantities of the following RPC devices:
 
 apc.dev 		APC MasterSwitch Plus APP v2.0.0, AOS v2.5.4 
 baytech.dev		Baytech RPC-3 F5.00
 baytech-rpc28-nc.dev	Baytech RPC28-30NC
+baytech-rpc3-nc.dev	Baytech RPC-3-NC
 icebox.dev		Linux Networx ICE box v2.x
 icebox3.dev		Linux Networx ICE box v3.x
-wti.dev			WTI NPS 3.02
-wti-rps10.dev		WTI RPS-10 (chain of 3)
 cyclades-pm8.dev	Cyclades PM8i
-
 phantom.dev		Rackable Phantom 3.0.4b
 phantom4.dev		Rackable Phantom 4
-baytech-rpc3-nc.dev	Baytech RPC-3-NC
+wti.dev			WTI NPS 3.02
+wti-rps10.dev		WTI RPS-10 (chain of 3)
+
+2. Livermore Development/Production Clusters
+
+apcnew.dev		ADEV
+			ALC
+			Lilac
+baytech.dev		Pengra
+			ILX
+baytech-rpc28-nc.dev	IGS
+baytech-rpc3-nc.dev	ILX
+icebox.dev		DEV (1 unit)
+icebox3.dev		MDEV (3 units)
+			MCR (121 units)
+phantom4.dev		Inferno(?)
+ibmh8.dev		ADEV (1 chain)
+			ALC (53 chains)
+			Lilac
+ipmipower.dev		TDEV (1 group)
+
+3. Other tests
+
+vpc tests: 		see Makefile for several invocations of powermand that
+			can use vpcd.  For example, it is possible to simulate 
+			a 256 device, 4096 plug configuration on a laptop.
+			vpcd can run both in "pipe" and "tcp" mode.
+
+
